2017-08-19  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.h (OPTION_MASK_ISA_ROUND): Remove.
	(TARGET_ISA_ROUND): Ditto.
	(TARGET_ROUND): Ditto.
	* config/i386/i386.c: Substitute TARGET_ROUND with TARGET_SSE4_1.
	* config/i386/i386.md: Ditto.
	* config/i386/sse.md: Ditto.
	* config/i386/i386-builtin.def: Substitute OPTION_MASK_ISA_ROUND
	with OPTION_MASK_ISA_SSE4_1.

2017-08-19  Uros Bizjak  <ubizjak@gmail.com>

	PR target/81894
	* doc/extend.texi (x86 Built-in Functions): Correct the name of
	__builtin_ia32_lzcnt_u16.

2017-08-18  Peter Bergner  <bergner@vnet.ibm.com>

	PR target/80210
	* config/rs6000/rs6000.c (rs6000_activate_target_options): New function.
	(rs6000_set_current_function): Rewrite function to use it.

2017-08-18  H.J. Lu  <hongjiu.lu@intel.com>

	PR c/53037
	* print-tree.c (print_node): Support DECL_WARN_IF_NOT_ALIGN
	and TYPE_WARN_IF_NOT_ALIGN.
	* stor-layout.c (do_type_align): Merge DECL_WARN_IF_NOT_ALIGN.
	(handle_warn_if_not_align): New.
	(place_union_field): Call handle_warn_if_not_align.
	(place_field): Call handle_warn_if_not_align.
	Copy TYPE_WARN_IF_NOT_ALIGN.
	(finish_builtin_struct): Copy TYPE_WARN_IF_NOT_ALIGN.
	(layout_type): Likewise.
	* tree-core.h (tree_type_common): Add warn_if_not_align.  Set
	spare to 18.
	(tree_decl_common): Add warn_if_not_align.
	* tree.c (build_range_type_1): Copy TYPE_WARN_IF_NOT_ALIGN.
	* tree.h (TYPE_WARN_IF_NOT_ALIGN): New.
	(SET_TYPE_WARN_IF_NOT_ALIGN): Likewise.
	(DECL_WARN_IF_NOT_ALIGN): Likewise.
	(SET_DECL_WARN_IF_NOT_ALIGN): Likewise.
	* doc/extend.texi: Document warn_if_not_aligned attribute.
	* doc/invoke.texi: Document -Wif-not-aligned and -Wpacked-not-aligned.

2017-08-17  Martin Liska  <mliska@suse.cz>

	PR bootstrap/81864
	* tree-loop-distribution.c (ddrs_table): Change type to pointer type.
	(get_data_dependence): Use it as pointer type.
	(distribute_loop): Likewise.

2017-08-17  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
